# AI-IntelliCare

./: .breakpoints  .replit  carebot.py  database.py  help.py  info.py  login.py  main.py  meal_scanner.py  medication.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
pages/: parent_page.py  teacher_page.py
