[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
streamlit = "^1.36.0"
openai = "^1.35.14"
streamlit-modal = "^0.1.2"
requests = "^2.32.3"
pandas = "^2.2.2"
oauth2client = "^4.1.3"
google-api-python-client = "^2.137.0"
google-auth = "^2.32.0"
google-auth-oauthlib = "^1.2.1"
gspread = "^6.1.2"
streamlit-extras = "^0.4.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"